sm - Improve adding a server, closes #4

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
 		<item name="colorAccent">@color/colorAccent</item>
 	</style>
 
+	<style name="AppDialog" parent="AppTheme">
+		<!-- Enable showing a title in a dialog -->
+		<item name="android:windowNoTitle">false</item>
+	</style>
 </resources>
