--- a/app/src/main/res/layout/server_dialog.xml
+++ b/app/src/main/res/layout/server_dialog.xml
@@ -4,7 +4,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent" >
 	
 	<EditText
 		android:id="@+id/server_name_field"
@@ -21,14 +21,14 @@
 		app:layout_constraintTop_toTopOf="parent"/>
 	
 	<EditText
-		android:id="@+id/server_url_field"
+		android:id="@+id/server_hostname_field"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="8dp"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:ems="10"
-		android:hint="url (eg: http://mysite.com/icing/)"
+		android:hint="@string/srvr_hostname_hint"
 		android:inputType="textUri"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -42,16 +42,86 @@
 		android:layout_marginTop="8dp"
 		android:text="Save"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/server_url_field"/>
+		app:layout_constraintTop_toBottomOf="@+id/https_cbx"/>
 	
 	<Button
 		android:id="@+id/cancel_btn"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
 		android:text="Cancel"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/server_url_field"/>
+		app:layout_constraintTop_toTopOf="@+id/save_btn"/>
+	
+	<CheckBox
+		android:id="@+id/https_cbx"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/use_https"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/srvr_ctx_txt"/>
+	
+	<RadioGroup
+		android:id="@+id/context_group"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:checkedButton="@+id/app_svr_rdo"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/rdo_grp_label">
+		
+		<RadioButton
+			android:id="@+id/standalone_rdo"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="@string/standalone_server"/>
+		
+		<RadioButton
+			android:id="@+id/app_svr_rdo"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="@string/app_server"/>
+	</RadioGroup>
+	
+	<TextView
+		android:id="@+id/rdo_grp_label"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/deployment_type"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/server_hostname_field"/>
+	
+	<CheckBox
+		android:id="@+id/custom_ctx_cbx"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/custom_ctx"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@+id/rdo_grp_label"
+		app:layout_constraintTop_toBottomOf="@+id/server_hostname_field"/>
+	
+	<EditText
+		android:id="@+id/srvr_ctx_txt"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginTop="8dp"
+		android:ems="10"
+		android:hint="@string/custom_ctx_hint"
+		android:inputType="textPersonName"
+		android:visibility="invisible"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="@+id/custom_ctx_cbx"
+		app:layout_constraintTop_toBottomOf="@+id/custom_ctx_cbx"/>
 
 </android.support.constraint.ConstraintLayout>
