--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -12,13 +12,13 @@
 	<com.android.volley.toolbox.NetworkImageView
 		android:id="@+id/movie_poster"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="196dp"
 		android:layout_marginEnd="8dp"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/movie_title"
+		app:layout_constraintTop_toTopOf="parent"
 		app:srcCompat="@android:drawable/spinner_background"/>
 	
 	<TextView
@@ -33,5 +33,5 @@
 		android:textSize="18sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
+		app:layout_constraintTop_toBottomOf="@+id/movie_poster"/>
 </android.support.constraint.ConstraintLayout>
