--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -10,6 +10,7 @@
 	
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/movies_list"
+		android:scrollbars="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_marginBottom="8dp"
