--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -1,37 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-											 xmlns:app="http://schemas.android.com/apk/res-auto"
-											 xmlns:tools="http://schemas.android.com/tools"
-											 android:id="@+id/linearLayout"
-											 android:layout_width="match_parent"
-											 android:layout_height="wrap_content"
-											 android:orientation="vertical"
-											 tools:layout_editor_absoluteX="0dp"
-											 tools:layout_editor_absoluteY="81dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			xmlns:app="http://schemas.android.com/apk/res-auto"
+			xmlns:tools="http://schemas.android.com/tools"
+			android:id="@+id/linearLayout"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical">
 	
-	<com.android.volley.toolbox.NetworkImageView
-		android:id="@+id/movie_poster"
-		android:layout_width="wrap_content"
-		android:layout_height="196dp"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@android:drawable/spinner_background"/>
-	
-	<TextView
-		android:id="@+id/movie_title"
-		android:layout_width="wrap_content"
+	<android.support.v7.widget.CardView
+		xmlns:card_view="http://schemas.android.com/apk/res-auto"
+		android:id="@+id/movie_card"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="8dp"
-		android:text="Title"
-		android:textAppearance="@style/TextAppearance.AppCompat"
-		android:textSize="18sp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/movie_poster"/>
-</android.support.constraint.ConstraintLayout>
+		android:layout_gravity="center"
+		card_view:cardUseCompatPadding="true"
+		card_view:cardElevation="@dimen/cardview_default_elevation"
+		card_view:cardCornerRadius="@dimen/cardview_default_radius">
+		
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:background="?android:selectableItemBackground"
+			>
+			
+			<com.android.volley.toolbox.NetworkImageView
+				android:id="@+id/movie_poster"
+				android:layout_width="wrap_content"
+				android:layout_height="196dp"
+				android:layout_alignParentTop="true"
+				android:layout_centerHorizontal="true"
+				app:srcCompat="@android:drawable/spinner_background"/>
+			
+			<TextView
+				android:id="@+id/movie_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/movie_poster"
+				android:layout_centerHorizontal="true"
+				android:text="Title"
+				android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+			
+		</RelativeLayout>
+	</android.support.v7.widget.CardView>
+</LinearLayout>
