--- a/app/src/main/res/layout/server_dialog.xml
+++ b/app/src/main/res/layout/server_dialog.xml
@@ -38,20 +38,21 @@
 		android:id="@+id/save_btn"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginTop="8dp"
 		android:text="Save"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/https_cbx"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"/>
 	
 	<Button
 		android:id="@+id/cancel_btn"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
 		android:layout_marginStart="8dp"
 		android:text="Cancel"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="@+id/save_btn"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintStart_toStartOf="parent"/>
 	
 	<CheckBox
 		android:id="@+id/https_cbx"
